@@ -191,6 +191,9 @@ CHAR16 * MenuExitInfo (IN UINTN MenuExit);
 
 BOOLEAN GetYesNoMenuEntry (IN OUT REFIT_MENU_SCREEN **Screen);
 BOOLEAN GetReturnMenuEntry (IN OUT REFIT_MENU_SCREEN **Screen);
+BOOLEAN ConfirmShutdown (VOID);
+BOOLEAN ConfirmRestart (VOID);
+
 
 BDS_COMMON_OPTION * CopyBdsOption (BDS_COMMON_OPTION *BdsOption);
 
